[package]
name = "tam_sandbox"
version = "0.1.0"
authors = ["Jonathan Landicheff <jlandicheff@kilig.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.5", features = ["dynamic"] }
rand = "0.8.3"
rand_seeder = "0.2.2"
rand_pcg = "0.3.0"
lazy_static = "1.4.0"
