[package]
name = "tam_sandbox"
version = "0.1.0"
authors = ["Jonathan Landicheff <jlandicheff@kilig.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.5", features = ["dynamic"] }
bevy_prototype_lyon = "0.3.1"

rand = { version = "0.8.3", features = ["std_rng"] }
lazy_static = "1.4.0"
